--- a/src/assets/styles/cmps/board/_board-header.scss
+++ b/src/assets/styles/cmps/board/_board-header.scss
@@ -57,6 +57,8 @@
 
     .back {
         grid-area: back;
+        width: 25px;
+        margin-inline-start: 10px;
     }
 
     .info-favorite {
